--- a/styles/PrivacyPolicy.module.css
+++ b/styles/PrivacyPolicy.module.css
@@ -1,7 +1,7 @@
 .privacy-policy-container {
   max-width: 800px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 120px 20px;
   line-height: 1.6;
 }
 
